extends Node2D

func onGithubButtonPressed():
	OS.shell_open("https://vustur.github.io/github")
	pass

func onTelegramButtonPressed():
	OS.shell_open("https://vustur.github.io/telegram")
	pass

func onDiscordButtonPressed():
	OS.shell_open("https://vustur.github.io/discord")
	pass

func onSiteButtonPressed():
	OS.shell_open("https://vustur.github.io")
	pass